# guest-scan

./: .env.example  .gitignore  .prettierrc  README.md  commitlint.config.cjs  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: app_state.rs  error.rs  main.rs
workers/desktop_agent/: pyproject.toml  requirements.txt
workers/desktop_agent/guestfill_agent/: __init__.py  __main__.py  cli.py
workers/ocr/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
workers/ocr/guestfill_ocr/: __init__.py  __main__.py  main.py
workers/ocr/guestfill_ocr/classification/: document_classifier.py  id_card_detector.py  passport_detector.py  script_detector.py
workers/ocr/guestfill_ocr/cli/: __init__.py  commands.py  progress_writer.py  request_reader.py  response_writer.py
workers/ocr/guestfill_ocr/common/: __init__.py  constants.py  errors.py  logging.py  result.py  time_utils.py
workers/ocr/guestfill_ocr/config/: config_loader.py  country_codes.json  default_config.py  document_rules.json  excel_columns.json  language_resolver.py
workers/ocr/guestfill_ocr/excel/: columns.py  diagnostics_sheet.py  errors_sheet.py  export_excel.py  instructions_sheet.py  styles.py  validation_lists.py
workers/ocr/guestfill_ocr/extraction/: confidence_engine.py  field_extractor.py  field_normalizer.py  field_validator.py  transliteration.py  warning_engine.py
workers/ocr/guestfill_ocr/id_card/: id_card_detector.py  id_card_ocr.py  id_field_parser.py  id_field_validator.py  qr_barcode_reader.py
workers/ocr/guestfill_ocr/image/: crop_utils.py  document_boundary.py  image_loader.py  orientation.py  paddleocr_preprocess.py  perspective_correction.py  preprocess.py  quality_analyzer.py  resize.py  thresholding.py
workers/ocr/guestfill_ocr/input/: file_discovery.py  file_validator.py  image_source.py  pdf_renderer.py
workers/ocr/guestfill_ocr/observability/: diagnostic_report.py  diagnostics.py  logger.py  metrics.py
workers/ocr/guestfill_ocr/ocr/: __init__.py  ocr_candidate.py  ocr_selector.py  online_fallback.py  paddleocr_engine.py  tesseract_engine.py
workers/ocr/guestfill_ocr/passport/: mrz_cleaner.py  mrz_cropper.py  mrz_line_finder.py  mrz_parser.py  mrz_repair.py  mrz_validator.py  passport_visual_ocr.py
workers/ocr/guestfill_ocr/pipeline/: batch_processor.py  document_processor.py  job_runner.py  result_builder.py
workers/ocr/guestfill_ocr/security/: privacy_guard.py  safe_logging.py  sensitive_masking.py
workers/ocr/guestfill_ocr/storage/: output_manager.py  temp_manager.py
workers/ocr/guestfill_ocr/tests/: ocr_worker.test.ts
workers/ocr/scripts/: build-ocr-worker.py
workers/ocr/scripts/hooks/: hook-guestfill_ocr.py
workers/ocr/tests/: conftest.py
workers/ocr/tests/e2e/: test_export_excel_e2e.py  test_full_pipeline_e2e.py  test_paddleocr_integration_e2e.py
workers/ocr/tests/unit/: test_commands.py  test_confidence_engine.py  test_diagnostics.py  test_document_processor.py  test_excel_export.py  test_file_validator.py  test_language_integration.py  test_language_resolver.py  test_masking.py  test_mrz_cleaner.py  test_mrz_parser.py  (+12 more)
(+288 files in other folders)
