[package]
name = "guestfill-desktop"
version = "0.1.0"
description = "GuestFill - Hotel guest information management"
authors = ["GuestFill"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [
    "dialog-all",
    "fs-all",
    "clipboard-all",
    "path-all",
    "shell-open",
    "shell-sidecar",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
